--- a/src/Variables.scss
+++ b/src/Variables.scss
@@ -18,8 +18,22 @@ $color-15: #0a1217;
 //$color-18: none;
 //$color-19: none;
 $color-20: rgba(1, 22, 37, 0.3);
-$color-21: rgba(1, 22, 37, 1);
+$color-21: rgba(1, 22, 37, 1); // дубликат оказывается $color-2
 $color-22: rgba(255, 255, 255, 0.1);
+
+
+
+$site-color-1: rgba(24, 24, 27, 1); // для ховеров
+$site-color-2: rgba(244, 244, 244, 1); // текст
+$site-color-3: rgba(17, 17, 20, 1); // основный фон + хидер
+$site-color-4: rgba(39, 39, 42, 1); // модалки
+$site-color-5: rgba(255, 255, 255, 0.1); // бордеры в большей степени
+$site-color-6: rgba(113, 113, 122, 1); // скрол
+$site-color-7: rgba(39, 39, 42, 1); // фон скрола
+$site-color-8: rgba(0, 255, 0, 1); // цвета
+$site-color-9: #ffb400; // цвета
+$site-color-10: #e4007f; // цвета
+$site-color-11: #ff0000; // цвета
 
 $fontCustom1: "Minecraft Title Cyrillic";
 $fontCustom2: "Minecraft Rus";
