--- a/src/modules/components/[0_grouped_0]-Generals/mode/Mode.module.scss
+++ b/src/modules/components/[0_grouped_0]-Generals/mode/Mode.module.scss
@@ -14,8 +14,8 @@
     justify-content: center;
     height: 128px;
     width: 400px;
-    color: $color-3;
-    border: 7px solid $color-1;
+    color: $site-color-2;
+    border: 7px solid $site-color-10;
     border-radius: 35px;
 
     .nameH3 {
@@ -25,14 +25,14 @@
       font-weight: 400;
       font-size: 48px;
       text-align: center;
-      color: $color-3;
+      color: $site-color-2;
       font-family: $fontCustom3;
     }
   }
 
   .circle {
     display: flex;
-    border: 5px solid $color-3;
+    border: 5px solid $site-color-2;
     border-radius: 50%;
     width: 27px;
     height: 27px;
@@ -44,7 +44,7 @@
     height: 81px;
     font-size: 22px;
     line-height: 27px;
-    color: $color-3;
+    color: $site-color-2;
     font-weight: 400;
     margin: auto 0;
   }
@@ -61,11 +61,11 @@
     .circle {
       width: 24px;
       height: 24px;
-      border: 4px solid $color-3;
+      border: 4px solid $site-color-2;
     }
 
     .modeNameWrapper {
-      border: 5px solid $color-1;
+      border: 5px solid $site-color-10;
 
       .nameH3 {
         font-size: 44px;
@@ -93,6 +93,9 @@
 }
 
 @media screen and (max-width: 960px) {
+  .modeBlock {
+    padding: 0 16px;
+  }
 }
 
 @media screen and (max-width: 768px) {
@@ -101,7 +104,7 @@
     margin: 45px auto;
 
     .modeNameWrapper {
-      border: 5px solid $color-1;
+      border: 5px solid $site-color-10;
       width: 275px;
       height: 96px;
 
@@ -139,7 +142,7 @@
     .circle {
       width: 20px;
       height: 20px;
-      border: 3px solid $color-3;
+      border: 3px solid $site-color-2;
       margin: 15px auto;
     }
 
@@ -162,7 +165,7 @@
     .modeNameWrapper {
       height: 55px;
       width: 250px;
-      border: 5px solid $color-1;
+      border: 5px solid $site-color-10;
 
       .nameH3 {
         font-size: 22px;
