--- a/src/modules/components/[0_grouped_0]-Generals/world/World.module.scss
+++ b/src/modules/components/[0_grouped_0]-Generals/world/World.module.scss
@@ -9,7 +9,7 @@
 
   .circle {
     display: flex;
-    border: 5px solid $color-3;
+    border: 5px solid $site-color-2;
     border-radius: 50%;
     width: 27px;
     height: 27px;
@@ -23,7 +23,7 @@
     line-height: 30px;
     font-size: 30px;
     font-weight: 400;
-    color: $color-3;
+    color: $site-color-2;
     text-align: center;
     font-family: $fontCustom2;
   }
@@ -32,7 +32,7 @@
     margin: 15px auto;
     width: auto;
     height: 90px;
-    border-left: 2px solid $color-3;
+    border-left: 2px solid $site-color-2;
   }
 
   .worldsImagesText {
@@ -56,7 +56,7 @@
     max-width: 300px;
     min-width: 250px;
     margin-top: 50px;
-    color: $color-3;
+    color: $site-color-2;
     height: auto;
     min-height: 100px;
     max-height: 150px;
@@ -92,7 +92,7 @@
     .circle {
       width: 24px;
       height: 24px;
-      border: 4px solid $color-3;
+      border: 4px solid $site-color-2;
     }
 
     .worldsName {
@@ -157,7 +157,7 @@
     .circle {
       width: 20px;
       height: 20px;
-      border: 3px solid $color-3;
+      border: 3px solid $site-color-2;
     }
 
     .worldsName {
@@ -203,8 +203,7 @@
     }
 
     .worldsImagesText {
-      margin: 5px;
-      margin-bottom: 15px;
+      margin: 5px 5px 15px 5px;
       max-width: none;
       width: auto;
 
