--- a/src/modules/pages/support/Support.module.scss
+++ b/src/modules/pages/support/Support.module.scss
@@ -19,7 +19,7 @@
     .titleSupport {
       font-size: 32px;
       font-weight: 400;
-      color: $color-3;
+      color: $site-color-2;
       margin: 0 auto;
       text-align: center;
       font-family: $fontCustom2;
@@ -31,7 +31,7 @@
       max-width: 450px;
       height: 25px;
       line-height: 25px;
-      color: $color-1;
+      color: $site-color-10;
       margin: 0 auto 0 25px;
       outline: none;
       transition: all 0.55s ease;
@@ -71,7 +71,7 @@
           display: flex;
           font-size: 16px;
           font-weight: 400;
-          color: $color-3;
+          color: $site-color-2;
           margin: 5px 0;
           text-align: start;
           line-height: 1.5;
@@ -89,7 +89,7 @@
         .footerSupport {
           font-size: 16px;
           font-weight: 400;
-          color: $color-3;
+          color: $site-color-2;
           margin: 12px 0 0 0;
           padding: 0 25px 0 25px;
         }
@@ -116,7 +116,7 @@
       height: 35px;
       line-height: 35px;
       text-align: center;
-      color: $color-3;
+      color: $site-color-2;
       font-weight: 400;
       font-size: 24px;
       justify-content: center;
@@ -130,7 +130,7 @@
       justify-content: center;
       flex-wrap: wrap;
       width: 80%;
-      margin: 100px auto 0 auto;
+      margin: 100px auto 80px auto;
 
       .monitoringCard {
         width: 240px;
@@ -139,13 +139,13 @@
         flex-direction: column;
         justify-content: center;
         margin: 8px auto;
-        background: $color-7;
-        border: 1px solid $color-22;
+        background: $site-color-4;
+        border: 1px solid $site-color-5;
         border-radius: 5px;
         cursor: pointer;
         transition: all 0.35s ease;
         outline: none;
-        color: $color-3;
+        color: $site-color-2;
         text-decoration: none;
         text-align: center;
         font-size: 18px;
@@ -155,11 +155,11 @@
 
         &:active, &:visited {
           outline: none;
-          color: $color-3;
+          color: $site-color-2;
         }
 
         &:hover {
-          background: $color-21;
+          background: $site-color-1;
         }
       }
     }
@@ -257,7 +257,7 @@
 
       .monitoringBlock {
         width: 94%;
-        margin: 65px auto 0 auto;
+        margin: 65px auto 65px auto;
       }
     }
   }
@@ -315,6 +315,8 @@
       }
 
       .monitoringBlock {
+        margin: 60px auto 45px auto;
+
         .titleAll {
           font-size: 20px;
         }
