--- a/src/modules/pages/articles/Articles-wiki.module.scss
+++ b/src/modules/pages/articles/Articles-wiki.module.scss
@@ -20,9 +20,53 @@
       margin: 0 auto;
       font-weight: 400;
       font-size: 32px;
-      color: $color-3;
+      color: $site-color-2;
       text-align: center;
       font-family: $fontCustom2;
     }
   }
 }
+
+@media screen and (max-width: 1600px) {
+}
+
+@media screen and (max-width: 1400px) {
+}
+
+@media screen and (max-width: 1280px) {
+}
+
+@media screen and (max-width: 1024px) {
+}
+
+@media screen and (max-width: 960px) {
+}
+
+@media screen and (max-width: 768px) {
+}
+
+@media screen and (max-width: 640px) {
+  .mainWiki {
+    .box {
+      .h3 {
+        font-size: 24px;
+        padding: 0 16px;
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 480px) {
+  .mainWiki {
+    .box {
+      .h3 {
+        font-size: 18px;
+        padding: 0 12px;
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 360px) {
+}
+
