--- a/src/common/header/Header.module.scss
+++ b/src/common/header/Header.module.scss
@@ -268,6 +268,10 @@ $line: 36px;
         }
       }
 
+      .phoneLink {
+        display: none;
+      }
+
       .last {
         margin: 0;
       }
@@ -348,6 +352,10 @@ $line: 36px;
       }
 
       .boxList {
+        .phoneLink {
+          display: flex;
+        }
+
         .prevDropUser {
           display: flex;
           flex-direction: row;
