--- a/src/Variables.scss
+++ b/src/Variables.scss
@@ -34,6 +34,7 @@ $site-color-8: rgba(0, 255, 0, 1); // цвета
 $site-color-9: #ffb400; // цвета
 $site-color-10: #e4007f; // цвета
 $site-color-11: #ff0000; // цвета
+$site-color-12: rgba(17, 17, 20, 0.5); // поле в модалке какой то
 
 $fontCustom1: "Minecraft Title Cyrillic";
 $fontCustom2: "Minecraft Rus";
